@@ -3748,13 +3748,28 @@ void debug_get_ioports(char *stats_buffer)
           }
 
   	if (MACHINE_IS_SPECTRUM_128_P2_P2A_P3 || MACHINE_IS_ZXUNO_BOOTM_DISABLED || MACHINE_IS_PRISM || MACHINE_IS_CHLOE || superupgrade_enabled.v || MACHINE_IS_CHROME || TBBLUE_MACHINE_128_P2 || TBBLUE_MACHINE_P2A) {
-                  sprintf (buf_linea,"Spectrum 7FFD port: %02X\n",puerto_32765);
-  		sprintf (&stats_buffer[index_buffer],"%s",buf_linea); index_buffer +=strlen(buf_linea);
-          }
+
+		//En el caso de zxuno, no mostrar si paginacion desactivada por DI7FFD
+		int mostrar=1;
+
+		if (MACHINE_IS_ZXUNO && zxuno_get_devcontrol_di7ffd()) mostrar=0;
+
+		if (mostrar) {
+            sprintf (buf_linea,"Spectrum 7FFD port: %02X\n",puerto_32765);
+  			sprintf (&stats_buffer[index_buffer],"%s",buf_linea); index_buffer +=strlen(buf_linea);
+		}
+    }
 
   	if (MACHINE_IS_SPECTRUM_P2A_P3 || MACHINE_IS_ZXUNO_BOOTM_DISABLED || MACHINE_IS_PRISM || superupgrade_enabled.v || MACHINE_IS_CHROME || TBBLUE_MACHINE_P2A) {
-  		sprintf (buf_linea,"Spectrum 1FFD port: %02X\n",puerto_8189);
-  		sprintf (&stats_buffer[index_buffer],"%s",buf_linea); index_buffer +=strlen(buf_linea);
+		//En el caso de zxuno, no mostrar si paginacion desactivada por DI1FFD
+		int mostrar=1;
+
+		if (MACHINE_IS_ZXUNO && zxuno_get_devcontrol_di1ffd()) mostrar=0;
+
+		if (mostrar) {
+  			sprintf (buf_linea,"Spectrum 1FFD port: %02X\n",puerto_8189);
+  			sprintf (&stats_buffer[index_buffer],"%s",buf_linea); index_buffer +=strlen(buf_linea);
+		}
   	}
 
 	if (diviface_enabled.v) {
